added two new advancements